kubernetes/apps/development/marketing-agency/app/website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: marketing-agency-website
  namespace: development
  labels:
    app.kubernetes.io/name: marketing-agency
    app.kubernetes.io/component: website
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: marketing-agency
    app.kubernetes.io/component: website
