kubernetes/apps/development/marketing-agency/app/website/ingress.yaml
---
# Marketing agency website at marketing-agency.${SECRET_DOMAIN} (external ingress). TLS and DNS via cert-manager / external-dns.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketing-agency-website
  namespace: development
  labels:
    app.kubernetes.io/name: marketing-agency
    app.kubernetes.io/component: website
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Marketing Agency
    gethomepage.dev/group: Development
spec:
  ingressClassName: external
  rules:
    - host: marketing-agency.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketing-agency-website
                port:
                  number: 3000
  tls:
    - hosts:
        - marketing-agency.${SECRET_DOMAIN}
